# discobots

./: .gitignore  AGENT.md  CLAUDE.md  DISCORD.md  PLAN.md  README.md  justfile  pyproject.toml
.claude/: settings.json
.github/workflows/: automerge.yml  ci.yml  deploy-gate.yml  deploy.yml  github-heartbeat.yml  skills-feed.yml  transit-panel.yml
channels/maps/: .gitignore  CLAUDE.md  README.md  board.mjs  cache_geo.py  cache_walkshots.py  geo.py  mapbot.py  oblique.mjs  package-lock.json  package.json  render.mjs  static-map.sh  webshot.mjs
channels/models/: .gitignore  CLAUDE.md  README.md
docs/: BUS.md  CICD.md  CODING.md  channel-audit.md  fleet-status.md  infrastructure.md  ops.md
docs/proposals/: discord-idea-slash-command.md  monkey-island-ui.md  valkey-expansion.md  workflow-event-notifications.md
docs/taste-training/: PLAN.md
hooks/claude-session-summary/: README.md  session_summary.py
maps/: .gitignore  CLAUDE.md  mapbot.py  transit.py  walksheds.py
mcp/: README.md  obsidian_mcp.py
mcp/tests/: test_obsidian_mcp.py
ops/: README.md  autodeploy.sh  build.sh  card_demo.py  chat_dashboard.py  claude_heatmap.py  dev_checkin.py  digest.py  embed_dashboard.py  fleet.py  fleet.toml  fleet_status.py  github_discord.py  live_service.py  loop_dashboard.py  minimem.py  obsidian-redirect.html  obsidian_redirect.py  ops_dashboard.py  orbmem.py  redirect-install.sh  run.sh  skills_discord.py  telemetry_sink.py  transit_dashboard.py  transit_discord.py  uptime.py  watcher.py
ops/_legacy/: run-digest.sh  run-transit.sh
ops/discokit/: __init__.py  art.py  (+16 more)
(+66 files in other folders)
